# epub-english-toolkit

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_web.py  study_tool.py  学习说明书.md  服务器部署说明书.md
data/progress/: tracker.json
data/study_packs/te-2026-03-21-2026-03-31/: pack.json
exports/anki/: te-2026-03-21-2026-03-31.tsv
exports/markdown/: daily-2026-03-31.md  te-2026-03-21-2026-03-31.md
exports/notion/: te-2026-03-21-2026-03-31.csv
exports/tts/te-2026-03-21-2026-03-31/: te-2026-03-21-2026-03-31-study-1.txt  te-2026-03-21-2026-03-31-study-2.txt  te-2026-03-21-2026-03-31-study-3.txt  te-2026-03-21-2026-03-31-study-4.txt  te-2026-03-21-2026-03-31-study-5.txt
src/epub_english_toolkit/: __init__.py  cli.py  epub_parser.py  integrations.py  markdown_export.py  models.py  pack_utils.py  reporting.py  services.py  storage.py  study_pack.py  text_utils.py  tracking.py  tts_tools.py  web_db.py  web_settings.py  webapp.py
src/epub_english_toolkit/web_static/: app.css
src/epub_english_toolkit/web_templates/: base.html  dashboard.html  job_detail.html  pack_detail.html  upload.html
test-output/runtime/: anki.tsv  daily.md  notion.csv  pack.md  sample.epub  tracker.json
test-output/runtime/tts/: sample-weekly-2026-03-31-study-1.txt  sample-weekly-2026-03-31-study-2.txt
test-output/web-runtime/data/: app.db  app.db-journal
test-output/web-runtime/data/uploads/: sample.epub
tests/: test_toolkit.py  test_webapp.py
web_data/: app.db-journal
(+1 files in other folders)
