[project]
name = "epub-english-toolkit"
version = "0.1.0"
description = "A lightweight toolkit for turning EPUB magazines into an English study workflow."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.30,<1.0",
  "jinja2>=3.1,<4.0",
  "python-multipart>=0.0.9,<1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
